2001-06-27  Andrew Cagney  <ac131313@redhat.com>

	* mi-disassemble.exp: Update to accept mi1 breakpoint tables.
	* mi-basics.exp: Ditto.
	* mi-simplerun.exp: Ditto.
	* mi-watch.exp: Ditto. Add check for full header.
	* mi-break.exp: Ditto. Add check for full header.

2001-06-26  Andrew Cagney  <ac131313@redhat.com>

	* mi-stack.exp: Update.  Output for args=... and
	locals=... changed to a list.
	
2001-06-26  Andrew Cagney  <ac131313@redhat.com>

	* mi-stack.exp: Update. Output for stack=..., args=... and
	stack-args=... changed to a list.

2001-06-25  Andrew Cagney  <ac131313@redhat.com>

	* mi-console.exp: Update args=... part of stop-reason
	patterns. Output changed to a list of arguments.
	* mi-disassemble.exp: Ditto.
	* mi-simplerun.exp: Ditto.
	* mi-return.exp: Ditto.
	* mi-read-memory.exp: Ditto.
	* mi-eval.exp: Ditto.
	* mi-watch.exp: Ditto.
	* mi-var-display.exp: Ditto.
	* mi-var-cmd.exp: Ditto.
	* mi-var-child.exp: Ditto.
	* mi-var-block.exp: Ditto.
	* mi-until.exp: Ditto.
	* mi-stepi.exp: Ditto.
	* mi-stack.exp: Ditto.
	* mi-regs.exp: Ditto.

2001-06-25  Andrew Cagney  <ac131313@redhat.com>

	* mi-read-memory.exp: Update patterns matching data-read-memory.
	Outputs a list.

2001-06-25  Andrew Cagney  <ac131313@redhat.com>

	* mi-regs.exp: Update patterns matching register-values.  Outputs a
	list.

2001-06-25  Andrew Cagney  <ac131313@redhat.com>

	* mi-regs.exp: Update patters matching register-names.  Now
	outputs a list.

2001-06-25  Andrew Cagney  <ac131313@redhat.com>

	* mi-regs.exp: Update patterns matching changed-registers.  Now
	outputs a list.

2001-06-23  Andrew Cagney  <ac131313@redhat.com>

	* ChangeLog-mi: Rename to ChangeLog.
	* mi-basics.exp: Remove local emacs variable defining
	change-log-default-name.
	* mi-break.exp, mi-console.exp, mi-disassemble.exp: Ditto.
	* mi-eval.exp, mi-hack-cli.exp, mi-read-memory.exp: Ditto.
	* mi-regs.exp, mi-return.exp, mi-simplerun.exp: Ditto.
	* mi-stack.exp, mi-stepi.exp, mi-until.exp: Ditto.