@@ -60,6 +60,9 @@ proc test_running_to_main {} {
 	-re "000\\*stopped,reason=\"breakpoint-hit\",bkptno=\"1\",thread-id=\"0\",frame=\{addr=\"$hex\",func=\"main\",args=\\\[\\\],file=\".*basics.c\",line=\"32\"\}\r\n$mi_gdb_prompt$" {
 	    pass "run to main"
 	}
+	-re ".*$mi_gdb_prompt$" {
+	    fail "run to main (2)"
+	}
 	timeout {
 	    fail "run to main (timeout)"
 	}
