@@ -60,6 +60,9 @@ gdb_expect {
     -re "000\\*stopped,reason=\"breakpoint-hit\",bkptno=\"1\",thread-id=\"0\",frame=\{addr=\"$hex\",func=\"main\",args=\{\},file=\".*mi-console.c\",line=\"13\"\}\r\n$mi_gdb_prompt$" {
 	    pass "run to main"
     }
+    -re ".*$mi_gdb_prompt$" {
+	fail "run to main (2)"
+    }
     timeout {
 	fail "run to main (timeout)"
     }
