@@ -1,3 +1,10 @@
+2001-08-18  Andrew Cagney  <ac131313@redhat.com>
+
+	* mi0-until.exp, mi-until.exp, mi0-stepi.exp, mi-stepi.exp,
+	mi-simplerun.exp, mi0-simplerun.exp, mi0-return.exp,
+	mi-return.exp, mi0-console.exp, mi-console.exp: Recognize an
+	unexpected run-to-main response. Report as a fail.
+
 2001-06-27  Andrew Cagney  <ac131313@redhat.com>
 
 	* mi-disassemble.exp: Update to accept mi1 breakpoint tables.
